--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
 	"require": {
 		"symfony/console": "v2.7.4",
-		"facebook/php-sdk-v4" : "~5.0"
+		"facebook/php-sdk-v4" : "~5.0",
+		"nette/utils" : "v2.3.4"
 	},
 	"autoload": {
 		"psr-4": {"App\\": "app/"}
