--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
 	"require": {
 		"symfony/console": "v2.7.4",
 		"facebook/php-sdk-v4" : "~5.0",
-		"nette/utils" : "v2.3.4"
+		"nette/utils" : "v2.3.4",
+		"nette/mail" : "v2.3.2"
 	},
 	"autoload": {
 		"psr-4": {"App\\": "app/"}
