--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 		"facebook/php-sdk-v4" : "~5.0",
 		"nette/utils" : "v2.3.4",
 		"nette/mail" : "v2.3.2",
-		"dibi/dibi" : "v2.3.2"
+		"dibi/dibi" : "v2.3.2",
+		"sunra/php-simple-html-dom-parser": "v1.5.0"
 	},
 	"autoload": {
 		"psr-4": {"App\\": "App/"}
