--- a/config.ini.template
+++ b/config.ini.template
@@ -6,7 +6,14 @@ app_id =
 app_secret = 
 group_id[] = 411010232285957
 group_id[] = 255049338000359
+exclude[] = 3+1
+exclude[] = 3+kk
+exclude[] = 4+1
+exclude[] = 4+kk
+exclude[] = 5+1
+exclude[] = 5+kk
 exclude[] = hledam
+exclude[] = hladam
 exclude[] = pokoj
 exclude[] = spolubydleni
 exclude[] = spolubydlici
@@ -25,3 +32,20 @@ url[] = "http://reality.bazos.cz/pronajmu/byt-2-1/?hledat=&rubriky=reality&hloka
 url = "http://www.sreality.cz/api/cs/v1/estates/rss?category_main_cb=1&locality_district_id=72&category_sub_cb=2|3|4|5&czk_price_summary_order2=0|10000&locality_region_id=14&category_type_cb=2"
 [idnes]
 url = "http://reality.idnes.cz/s/pronajem/byty/do-10000-za-mesic/brno-mesto/"
+[ismuni]
+url[] = "https://is.muni.cz/rss/bb/3denni_inzerce/bydleni_nabizim/rss.xml?uco=;klic="
+url[] = "https://is.muni.cz/rss/bb/inzerce/bydleni_nabizim/rss.xml?uco=;klic="
+exclude[] = 3+1
+exclude[] = 3+kk
+exclude[] = 4+1
+exclude[] = 4+kk
+exclude[] = 5+1
+exclude[] = 5+kk
+exclude[] = pokoj
+exclude[] = spolubydleni
+exclude[] = spolubydlici
+exclude[] = holka
+exclude[] = holky
+exclude[] = holku
+exclude[] = kluk
+exclude[] = kluci
