--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 		"nette/utils" : "v2.3.4",
 		"nette/mail" : "v2.3.2",
 		"dibi/dibi" : "v2.3.2",
-		"sunra/php-simple-html-dom-parser": "v1.5.0"
+		"sunra/php-simple-html-dom-parser": "v1.5.0",
+		"katzgrau/klogger" : "v1.0.0"
 	},
 	"autoload": {
 		"psr-4": {"App\\": "App/"}
